deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 5 
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api-container
        image: gorettinbg/apirestgo-api-go:latest  # imagen en Docker Hub
        ports:
        - containerPort: 8080  # Puerto expuesto por la API
