mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0  
        ports:
        - containerPort: 3306  
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql  # Carpeta de persistencia de datos
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc  # PVC (Persistent Volume Claim) para persistencia de datos
