service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      port: 8080  # Puerto del servicio
      targetPort: 8080  # Puerto en el contenedor
